--- a/src/main/resources/com/posapp/views/login_screen.fxml
+++ b/src/main/resources/com/posapp/views/login_screen.fxml
@@ -1,16 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="431.0" prefWidth="329.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.posapp.controllers.LoginScreenController">
    <children>
-      <Label layoutX="247.0" layoutY="153.0" prefHeight="95.0" prefWidth="210.0" text="login">
+      <TextField fx:id="txtuser" alignment="TOP_CENTER" layoutX="56.0" layoutY="158.0" prefHeight="32.0" prefWidth="218.0" promptText="Username" style="-fx-border-color: black;">
          <font>
-            <Font size="47.0" />
+            <Font size="15.0" />
          </font>
-      </Label>
+      </TextField>
+      <PasswordField fx:id="txtpassword" alignment="TOP_CENTER" layoutX="55.0" layoutY="240.0" prefHeight="32.0" prefWidth="218.0" promptText="Password" style="-fx-border-color: black;">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </PasswordField>
+      <Button fx:id="btnlogin" alignment="TOP_CENTER" layoutX="78.0" layoutY="317.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="173.0" style="-fx-background-color: black;" text="Login" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font size="15.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="CLOSED_HAND" />
+         </cursor>
+      </Button>
+      <ImageView fitHeight="71.0" fitWidth="64.0" layoutX="132.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/logo/pos.me.crop3.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="129.0" layoutY="388.0" prefHeight="26.0" prefWidth="72.0" text="version 1.0" />
+      <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="55.0" layoutY="159.0" pickOnBounds="true">
+         <image>
+            <Image url="@../assets/userpass/user.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="55.0" layoutY="242.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/userpass/padlock.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
