--- a/src/main/resources/com/posapp/views/dashboard_screen_operator.fxml
+++ b/src/main/resources/com/posapp/views/dashboard_screen_operator.fxml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -29,7 +33,23 @@
                      <Button fx:id="btnlogout" mnemonicParsing="false" onAction="#clicklogout" text="Log out" />
                  </children>
              </VBox>
-            <Label layoutX="410.0" layoutY="165.0" prefHeight="120.0" prefWidth="329.0" text="operator" />
+            <TextField fx:id="txtusername" layoutX="259.0" layoutY="82.0" prefHeight="35.0" prefWidth="180.0" promptText="Username" />
+            <TextField fx:id="txtpassword" layoutX="460.0" layoutY="82.0" prefHeight="35.0" prefWidth="180.0" promptText="Password" />
+            <ComboBox fx:id="cmbrole" layoutX="664.0" layoutY="81.0" prefHeight="35.0" prefWidth="180.0" promptText="Role" />
+            <TableView fx:id="tblusers" editable="true" layoutX="300.0" layoutY="296.0" prefHeight="240.0" prefWidth="618.0" AnchorPane.bottomAnchor="64.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="182.0" AnchorPane.topAnchor="296.0">
+              <columns>
+                <TableColumn fx:id="colUser" prefWidth="201.66665649414062" text="Username" />
+                <TableColumn fx:id="colPass" prefWidth="209.33334350585938" text="Password" />
+                  <TableColumn fx:id="colRole" minWidth="0.0" prefWidth="143.0" text="Role" />
+                  <TableColumn fx:id="colId" prefWidth="201.66665649414062" text="Username" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+            <Button fx:id="btnadd" layoutX="285.0" layoutY="182.0" mnemonicParsing="false" onAction="#clickadd" prefHeight="30.0" prefWidth="135.0" text="Add user" />
+            <Button fx:id="btnedit" layoutX="486.0" layoutY="183.0" mnemonicParsing="false" onAction="#clickedit" prefHeight="30.0" prefWidth="135.0" text="edit" />
+            <Button fx:id="btndelete" layoutX="662.0" layoutY="182.0" mnemonicParsing="false" onAction="#clickdelete" prefHeight="30.0" prefWidth="135.0" text="delete" />
          </children>
       </AnchorPane>
    </children>
